--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 	<h1>Welcome to Estuktest</h1>
 	<p>The largest online digital book store</p>
-	<%= link_to "Books", "#", class: "btn btn-primary btn-lg" %>
+	<%= link_to "Books", books_path, class: "btn btn-primary btn-lg" %>
 	<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 	
 
