--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
 <body>
 <%= render "layouts/header" %>
 <div class="container">
+<% flash.each do |type, message| %>
+<div class="alert alert-info fade-in">
+	<button class="close" data-dismiss="alert">X</button>
+	<%= message %>
+<% end %>
 <%= yield %>
 </div>
 
